# riftx

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs  tui.rs
src/engine/: archive.rs  crypto.rs  mod.rs  utils.rs
tests/: integration.rs
