[package]
name = "riftx"
version = "0.1.0"
edition = "2024"

[lib]
name = "riftx"
path = "src/lib.rs"

[[bin]]
name = "riftx"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
liblzma = "0.4.6"
rand = "0.10.0"
ratatui = "0.30.0"
rpassword = "7.3.1"
tar = "0.4.45"
