[package]
name = "riftx"
version = "1.0.0"
edition = "2024"

[lib]
name = "riftx"
path = "src/lib.rs"

[[bin]]
name = "riftx"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
liblzma = "0.4.6"
rand = "0.10.0"
rpassword = "7.3.1"
tar = "0.4.45"
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.27.0"
