[package]
name = "riftx"
version = "1.1.1"
edition = "2024"

[lib]
name = "riftx"
path = "src/lib.rs"

[[bin]]
name = "riftx"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
liblzma = { version = "0.4.6", features = ["parallel"] }
rand = "0.10.1"
rayon = "1.11.0"
rpassword = "7.4.0"
tar = "0.4.45"
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
